@@ -186,18 +186,15 @@ public class FriendService implements IFriendService {
 
     @Override
     public List<UserDTO> getFollowedFriends(String userId) {
-        List<User> friends = FilterUserByStatus(userId, FriendShipStatus.FOLLOWING);
-        return friends
-                .stream()
-                .map(friend -> modelMapper.map(friend, UserDTO.class))
-                .collect(Collectors.toList());
+        List<UserDTO> friends = FilterUserByStatus(userId, FriendShipStatus.FOLLOWING);
+        return friends;
     }
 
     @Override
     public List<UserDTO> getIsFriendFriends(String userId) {
         List<User> friends = new ArrayList<User>();
         //Lấy ra toàn bộ dữ liệu trong bảng friendship có chưa userId
-        List<Friendship> friendships = friendshipRepo.getAllFriendShipByUserId(userId);
+        List<Friendship> friendships = friendshipRepo.getFriendShipByUserId(userId);
 
         //Lọc lại dữ liệu để lấy ra dữ liệu có status = ISFRIEND
         List<Friendship> friendsWithStatusIsFriendship = friendships
@@ -217,11 +214,7 @@ public class FriendService implements IFriendService {
 
     @Override
     public List<UserDTO> getPendingFriends(String userId) {
-        List<User> friends = FilterUserByStatus(userId, FriendShipStatus.PENDING);
-        return friends
-                .stream()
-                .map(friend -> modelMapper.map(friend, UserDTO.class))
-                .collect(Collectors.toList());
+        return FilterUserByStatus(userId, FriendShipStatus.PENDING);
     }
 
     @Override
@@ -365,16 +358,24 @@ public class FriendService implements IFriendService {
         }
     }
 
-    private List<User> FilterUserByStatus(String userId, FriendShipStatus status) {
-        List<User> friends = new ArrayList<User>();
-        List<Friendship> friendships = friendshipRepo.getFriendShipByUserId(userId);
+    private List<UserDTO> FilterUserByStatus(String userId, FriendShipStatus status) {
+        List<User> friends = new ArrayList<>();
+        List<Friendship> friendships;
+        if(FriendShipStatus.PENDING.equals(status)){
+            friendships= friendshipRepo.getFriendById(userId);
+        }else{
+            friendships = friendshipRepo.getFriendShipByUserId(userId);
+        }
         List<Friendship> friendshipWithPending = friendships
                 .stream()
                 .filter(friendship -> checkStatusInFriendship(friendship, status))
-                .collect(Collectors.toList());
-        friendshipWithPending.forEach(friendship -> friends.add(friendship.getFriend()));
-        return friends;
-
+                .toList();
+        if(FriendShipStatus.PENDING.equals(status)){
+            friendshipWithPending.forEach(friendship -> friends.add(friendship.getFromUser()));
+        }else{
+            friendshipWithPending.forEach(friendship -> friends.add(friendship.getFriend()));
+        }
+        return friends.stream().map(friend -> modelMapper.map(friend, UserDTO.class)).toList();
     }
 
     private void sendNotificationAfterAddFriendship(String userId, String friendId, String type, String message) {
